--- a/index.html
+++ b/index.html
@@ -4,17 +4,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>vermcurltest</title>
-	<!--
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	-->
 	<link rel="stylesheet" type="text/css" href="interface.css" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body>
-https://level3rat.github.io/vermcurltest/1
-https://level3rat.github.io/vermcurltest/2
+<div class="box"><a href="1.json">1</a><br></div>
+<div class="box"><a href="2.json">2</a><br></div>
+<div class="box"><a href="lorem.json">lorem</a><br></div>
 <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
