--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="box"><a href="1.json">1</a><br></div>
 <div class="box"><a href="2.json">2</a><br></div>
 <div class="box"><a href="lorem.json">lorem</a><br></div>
-<div class="box"><a href="list.json">list</a><br></div>
+<div class="box"><a href="index.json">index</a><br></div>
 <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
